# ros2-latency-analysis

./: .gitattributes  .gitignore  README.md
.github/workflows/: build.yml  build_aarch64.yml  build_natively_arm.yml
analysis/: 3d-comb-histo.py  add-path-archi.py  collect_lat_two_nodes.py  collect_latencies.py  combine-histo.py  get-plots.py  hey.bash  plots.ipynb  process_csv.py  t10_plots.py
analysis/misc/: lost-records-exp.txt
analysis/plot-scripts/: 3d-histo.py  collect_lat_two_nodes.py  t2-10-all-plots.py  t2-10_mte_plots.py
min-pub-sub/: CMakeLists.txt  package.xml
plot/: 3d-histo.py  t2-10-all-plots.py
process/: check-path.py  find-empty-subfolders.py  get-plots.py  process.md
record/: execarchi_from_string.py  generate_configs.py  record_experiments.py  task_allocation_diagram.py
scripts/: exec_architectures.py  generate_configs.py  install_caret.bash  make-archi-files.bash  prep_caret.bash  record_experiments.py  retrieve_trace_folder.bash  retrieve_traces.bash  yaml_from_string.py
side-programs/: l2_cache_eviction.c
simple-chain/: CMakeLists.txt  package.xml
simple-chain/config/: exec-cpu-n-mte-per-2-node.yaml  exec-cpu-n-per-1-node.yaml  exec-cpu-n-ste.yaml  executor_architecture_template.yaml  msg_sizes.yaml  two_nodes_1.yaml  two_nodes_2.yaml  two_nodes_payload.yaml
simple-chain/include/: actuator.hpp  camera.hpp  control.hpp  cpu_affinity_utils.hpp  fusion.hpp  listener.hpp  msg_presets.hpp  msg_size.hpp  perception.hpp  planning.hpp  talker.hpp  templnode.hpp
simple-chain/launch/: 1-mte-launch.py  1-ste-launch.py  exec_archi_launch.py  full-chain-launch.py  n-mte-1-launch.py  n-mte-2-launch.py  n-mte-per-1-node-launch.py  n-mte-per-2-node-launch.py  n-ste-launch.py  n-ste-test-launch.py  two_nodes_m1_launch.py  two_nodes_m2_launch.py  two_nodes_s1_launch.py  two_nodes_s2_launch.py
simple-chain/src/: 1-mte.cpp  1-ste.cpp  actuator.cpp  camera.cpp  camera_fusion.cpp  control.cpp  cpu_affinity_utils.cpp  exec_archi.cpp  fusion.cpp  n-mte-per-1-node.cpp  n-mte-per-2-node.cpp  n-ste.cpp  perception.cpp  planning.cpp  templnode.cpp  two_nodes_m1.cpp  two_nodes_m2.cpp  two_nodes_s1.cpp  two_nodes_s2.cpp
simple-chain/src/tasks/: actuator.cpp  camera.cpp  control.cpp  fusion.cpp  listener.cpp  perception.cpp  planning.cpp  talker.cpp
simple-chain/src/utils/: cpu_affinity_utils.cpp
